# multiomics_research

./: .gitignore  .mcp.json  CLAUDE.md  README.md  pyproject.toml
.claude/: settings.json
.claude-plugin/: plugin.json
.claude/skills/: research-methodology
analyses/2026-04-06-1432-n_limitation_signature/: .gitignore  README.md  caveats.md  decisions.md  gaps_and_friction.md  methods.md  references.md
analyses/2026-04-08-1038-n_limitation_signature_v2/: .gitignore  README.md  caveats.md  decisions.md  gaps_and_friction.md  methods.md  references.md
analyses/2026-04-09-1713-pathway_enrichment_b1/: .gitignore  README.md  caveats.md  decisions.md  gaps_and_friction.md  mcp_tool_requirements.md  methods.md  references.md
analyses/2026-04-20-1243-pathway_enrichment_b2/: .gitignore  api_coverage.md  decisions.md  gaps_and_friction.md  hypotheses.md  ontology_selection.md
analyses/2026-04-27-1117-prochlorococcus_stress_axenic_vs_coculture/: gaps_and_friction.md  paper.md
analyses/2026-04-27-1638-proteome_transcriptome_discordance/: gaps_and_friction.md  paper.md
analyses/2026-04-29-1025-axenic_up_hypotheticals_med4/: gaps_and_friction.md  paper.md
analyses/2026-05-19-1037-cyano_n_gene_inventory/: .gitignore  gaps_and_friction.md  paper.md
analyses/n_stress_markers_med4/: .gitignore  README.md  gaps_and_friction.md  methods.md
analyses/nitrogen_stress_med4/: .gitignore  README.md  (+2 more)
evals/: chain_evals.yaml  research_questions.json  trigger_evals.json
hooks/: hooks.json  log-mcp-usage.sh
scripts/: analyze_usage.py  run_chain_eval.py  run_trigger_eval.py
(+460 files in other folders)
