[project]
name = "multiomics-research"
version = "0.1.0"
description = "Research skills, evaluation framework, and usage logging for the multiomics KG MCP server"
requires-python = ">=3.11"
dependencies = [
    "pyyaml>=6.0",
]

[project.optional-dependencies]
analysis = [
    "pandas>=2.0",
    "matplotlib>=3.7",
    "scipy>=1.11",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
