[project]
name = "multiomics-research"
version = "0.1.0"
description = "Research skills, evaluation framework, and usage logging for the multiomics KG MCP server"
requires-python = ">=3.11"
dependencies = [
    "pyyaml>=6.0",
    "statsmodels>=0.14.6",
]

[project.optional-dependencies]
analysis = [
    "pandas>=2.0",
    "matplotlib>=3.7",
    "scipy>=1.11",
    "multiomics-explorer",
]

[tool.uv.sources]
multiomics-explorer = { path = "../multiomics_explorer", editable = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
# No package module named multiomics_research exists, so we include files manually.
include = [
    "CLAUDE.md",
    "pyproject.toml",
    "scripts/**",
    "skills/**",
    "evals/**",
    "hooks/**",
    "benchmarks/**",
    "notebooks/**",
]
